cmake_minimum_required(VERSION 3.0.0)
project(Yolov9)
SET("OpenCV_DIR" "E:\\Opencv\\opencv_vs\\build")
SET("ONNXRUNTIME_DIR" "E:\\Onnxruntime\\cpu\\1.15")
add_executable(Yolov9 main.cpp)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
target_compile_features(Yolov9 PRIVATE cxx_std_14)
find_library(PATH ${ONNXRUNTIME_DIR})
target_include_directories(Yolov9 PRIVATE "${ONNXRUNTIME_DIR}/include")
target_link_libraries(Yolov9 "${ONNXRUNTIME_DIR}/lib/onnxruntime.lib")
find_package(OpenCV REQUIRED)
target_include_directories(Yolov9 PRIVATE ${OpenCV_INCLUDE_DIRS})
target_link_libraries(Yolov9 ${OpenCV_LIBS})

